--- a/{{cookiecutter.project_slug}}/.vscode/launch.json
+++ b/{{cookiecutter.project_slug}}/.vscode/launch.json
@@ -1,165 +1,4 @@
 {
   "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "(Linux) Debug: Test",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/target/build/test/src/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_test_addition",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "preLaunchTask": "build_debug",
-      "MIMode": "gdb",
-      "miDebuggerPath": "/usr/bin/gdb",
-      "logging": {
-        "engineLogging": false,
-        "trace": true,
-        "traceResponse": true
-      },
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
-    },
-    {
-      "name": "(Linux) Debug: Example",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/target/build/example/example/empty_example",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "preLaunchTask": "build_release",
-      "MIMode": "gdb",
-      "miDebuggerPath": "/usr/bin/gdb",
-      "logging": {
-        "engineLogging": false,
-        "trace": true,
-        "traceResponse": true
-      },
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
-    },
-    {
-      "name": "(Linux) Release: Example",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/release/example/example/empty_example",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "preLaunchTask": "build_release",
-      "MIMode": "gdb",
-      "miDebuggerPath": "/usr/bin/gdb",
-      "logging": {
-        "engineLogging": false,
-        "trace": true,
-        "traceResponse": true
-      },
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
-    },
-    {
-      "name": "(Mac) Debug: Test",
-      "type": "lldb",
-      "request": "launch",
-      "program": "${workspaceFolder}/target/build/test/src/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_test_addition",
-      "args": [],
-      "cwd": "${workspaceFolder}",
-      "env": {},
-      "preLaunchTask": "build_debug"
-    },
-    {
-      "name": "(Mac) Debug: Example",
-      "type": "lldb",
-      "request": "launch",
-      "program": "${workspaceFolder}/target/build/example/example/empty_example",
-      "args": [],
-      "cwd": "${workspaceFolder}",
-      "env": {},
-      "preLaunchTask": "build_debug"
-    },
-    {
-      "name": "(Mac) Release: Example",
-      "type": "lldb",
-      "request": "launch",
-      "program": "${workspaceFolder}/release/example/example/empty_example",
-      "args": [],
-      "cwd": "${workspaceFolder}",
-      "env": {},
-      "preLaunchTask": "build_release"
-    },
-    {
-      "name": "(Windows) Debug: Test",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/target/build/test/src/{{cookiecutter.project_slug}}/Debug/test_addition",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ],
-      "preLaunchTask": "windows_build_debug",
-      "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
-      "logging": {
-        "engineLogging": true,
-        "trace": true,
-        "traceResponse": true
-      }
-    },
-    {
-      "name": "(Windows) Debug: Example",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/target/build/example/example/Debug/empty_example",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ],
-      "preLaunchTask": "windows_build_debug",
-      "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
-      "logging": {
-        "engineLogging": true,
-        "trace": true,
-        "traceResponse": true
-      }
-    },
-  ]
+  "configurations": []
 }
