--- a/{{cookiecutter.project_slug}}/Makefile
+++ b/{{cookiecutter.project_slug}}/Makefile
@@ -1,51 +1,44 @@
-depends:
-	vcpkg integrate install
-	vcpkg install
+# Detect the platform and set the appropriate debug preset
+ifeq ($(shell uname), Darwin)
+    PLATFORM=macos
+else ifeq ($(shell uname), Linux)
+    PLATFORM=linux
+else ifeq ($(OS), Windows_NT)
+	PLATFORM=windows
+else
+    $(error Unsupported platform)
+endif
+
+# Set debug, release, and cicd presets based on the platform
+DEBUG_PRESET=$(PLATFORM)-debug
+RELEASE_PRESET=$(PLATFORM)-release
+CICD_PRESET=$(PLATFORM)-cicd
 
 build_release:
-	vcpkg install
-	cmake -S . -B target/release -D CMAKE_BUILD_TYPE=Release
-	cmake --build target/release --config Release
-	cmake --install target/release
+	echo "Building with preset: $(RELEASE_PRESET)"
+	cmake --preset $(RELEASE_PRESET)
+	cmake --build --preset $(RELEASE_PRESET) -j16
 
 build_debug:
-	vcpkg install --x-feature=test
-	cmake -S . -B target/build \
-		-D CMAKE_BUILD_TYPE=Debug \
-		-D BUILD_DOCS=OFF \
-		-D BUILD_TESTS=ON \
-		-D ENABLE_COVERAGE=ON \
-		-D DEVELOPER_MODE=ON \
-		-D ENABLE_SIMD=ON
+	echo "Building with preset: $(DEBUG_PRESET)"
+	cmake --preset $(DEBUG_PRESET)
+	cmake --build --preset $(DEBUG_PRESET) -j16
 
-	cmake --build target/build --config Debug -j 16
-	cmake --install target/build
-
-build_debug_cicd:
-	vcpkg install --x-feature=test
-	cmake -S . -B target/build \
-		-D CMAKE_BUILD_TYPE=Debug \
-		-D BUILD_DOCS=OFF \
-		-D BUILD_TESTS=ON \
-		-D ENABLE_COVERAGE=ON \
-		-D DEVELOPER_MODE=ON \
-		-D ENABLE_SIMD=OFF
-
-	cmake --build target/build --config Debug -j 16
-	cmake --install target/build
+build_cicd:
+	echo "Building with preset: $(CICD_PRESET)"
+	cmake --preset $(CICD_PRESET)
+	cmake --build --preset $(CICD_PRESET) -j16
 
 run_tests:
-	cd target/build && ctest --output-on-failure -j16 && cd ..
+	echo "Running tests with preset: $(DEBUG_PRESET)"
+	ctest --preset $(DEBUG_PRESET) --output-on-failure -j16 --verbose
 
 run_docs:
-	cmake -S . -B build \
-		-D CMAKE_BUILD_TYPE=Debug \
-		-D BUILD_DOCS=ON \
-		-D BUILD_TESTS=OFF \
-		-D ENABLE_COVERAGE=OFF \
-		-D DEVELOPER_MODE=ON \
-        -D ENABLE_SIMD=OFF
-	cmake --build target/build --config Debug
-	cmake --install target/build
+	echo "Building docs with preset: $(DEBUG_PRESET)"
+	cmake --preset $(DEBUG_PRESET) -D BUILD_DOCS=ON
+	cmake --build --preset $(DEBUG_PRESET) -j16
 	doxygen target/build/docs/Doxyfile
 	python3 -m http.server 8000 --directory target/build/docs/html
+
+image:
+	docker compose build
