--- a/{{cookiecutter.project_slug}}/.devcontainer/Dockerfile.cicd
+++ b/{{cookiecutter.project_slug}}/.devcontainer/Dockerfile.cicd
@@ -3,13 +3,15 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y \
     build-essential \
-    git \
+    ccache \
+    clang \
     cmake \
     curl \
-    zip \
-    pkg-config \
+    git \
+    mold \
     ninja-build \
-    clang \
+    pkg-config \
+    zip \
     && \
     rm -rf /var/lib/apt/lists/*
 
