--- a/{{cookiecutter.project_slug}}/Makefile
+++ b/{{cookiecutter.project_slug}}/Makefile
@@ -1,3 +1,5 @@
+MAKE_JOBS ?= $(shell nproc)
+
 # Detect the platform and set the appropriate debug preset
 ifeq ($(shell uname), Darwin)
     PLATFORM=macos
@@ -18,33 +20,33 @@ CICD_PRESET=$(PLATFORM)-cicd
 build_release:  ## Build release version
 	@echo "Building with preset: $(RELEASE_PRESET)"
 	@cmake --preset $(RELEASE_PRESET)
-	@cmake --build --preset $(RELEASE_PRESET) -j16
+	@cmake --build --preset $(RELEASE_PRESET) -j$(MAKE_JOBS)
 	@$(MAKE) BUILD_TYPE=release post_build_symlink
 
 .PHONY: build_debug
 build_debug:  ## Build debug version
 	@echo "Building with preset: $(DEBUG_PRESET)"
 	@cmake --preset $(DEBUG_PRESET)
-	@cmake --build --preset $(DEBUG_PRESET) -j16
+	@cmake --build --preset $(DEBUG_PRESET) -j$(MAKE_JOBS)
 	@$(MAKE) BUILD_TYPE=debug post_build_symlink
 
 .PHONY: build_cicd
 build_cicd:  ## Build CI/CD version
 	@echo "Building with preset: $(CICD_PRESET)"
 	@cmake --preset $(CICD_PRESET)
-	@cmake --build --preset $(CICD_PRESET) -j16
+	@cmake --build --preset $(CICD_PRESET) -j$(MAKE_JOBS)
 	@$(MAKE) BUILD_TYPE=cicd post_build_symlink
 
 .PHONY: run_tests
 run_tests:  ## Run unit tests
 	@echo "Running tests with preset: $(DEBUG_PRESET)"
-	@ctest --preset $(DEBUG_PRESET) --output-on-failure -j16 --verbose
+	@ctest --preset $(DEBUG_PRESET) --output-on-failure -j$(MAKE_JOBS) --verbose
 
 .PHONY: run_docs
 run_docs:  ## Build and serve documentation
 	@echo "Building docs with preset: $(DEBUG_PRESET)"
 	@cmake --preset $(DEBUG_PRESET) -D BUILD_DOCS=ON
-	@cmake --build --preset $(DEBUG_PRESET) -j16
+	@cmake --build --preset $(DEBUG_PRESET) -j$(MAKE_JOBS)
 	@$(MAKE) BUILD_TYPE=debug post_build_symlink
 	@doxygen target/build/docs/Doxyfile
 	@python3 -m http.server 8000 --directory target/build/docs/html
