--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -2,4 +2,4 @@ services:
   cicd:
     build:
       context: .
-      dockerfile: .devcontainer/Dockerfile.cicd
+      dockerfile: .devcontainer/cicd.Dockerfile
